--- a/Lab_Tasks/Lab_Task_2/regestration.html
+++ b/Lab_Tasks/Lab_Task_2/regestration.html
@@ -121,6 +121,16 @@
 	                            </select>
 	                        </p>
 	                        <p>
+	                            <label for="District">District:</label>
+	                            <select name="District" id="District" required>
+	                                <option value="" selected>Select District</option>
+	                                <option value="Saidpur">Saidpur</option>
+	                                <option value="Thakurgaon">Thakurgaon</option>
+	                                <option value="Pirganj">Pirganj</option>
+	                                <option value="Nilphamary">Nilphamary</option>
+	                            </select>
+	                        </p>
+	                        <p>
 	                            <button type="submit">Submit</button>
 	                        </p>
 	                    </td>
